mediastack/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-deployment
  namespace: mediastack
spec:
  selector:
    matchLabels:
      app: overseerr
  replicas: 1
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /config
          name: overseerr-config
      dnsConfig:
        options:
          - name: ndots
            value: "1"          
      volumes:
      - name: overseerr-config
        persistentVolumeClaim:
          claimName: overseerr-config-pvc
