mediastack/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: mediastack
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: overseerr.sancaktar.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr-service    
            port:
              number: 80
